--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -17,6 +17,8 @@ plugins:
       uri: https://github.com/trunk-io/plugins
 lint:
   enabled:
+    - clippy@1.65.0
+    - yamllint@1.37.1
     - checkov@3.2.447
     - git-diff-check
     - osv-scanner@2.0.3
